# CGTutorial

./: .gitmodules  CMakeLists.txt  README.md
include/: asset.hpp.in
src/cpp/: CGTutorial(1).cpp  CGTutorial.cpp  objects.cpp
src/shader/: StandardShading.fragmentshader
